Remove unnecessary margins on column blocks. Remove bottom space underneath site container. Fix the site container having a set width and padding too wide for the browser window.

--- a/css/gutenberg-frontend-styles.css
+++ b/css/gutenberg-frontend-styles.css
@@ -624,14 +624,12 @@ hr.wp-block-separator {
   .entry-content .wp-block-columns .wp-block-column:first-of-type {
     -ms-flex: 1;
     flex: 1;
-    margin-left: 15px;
     margin-right: 15px;
   }
   .entry-content .wp-block-columns .wp-block-column:last-of-type {
     -ms-flex: 1;
     flex: 1;
     margin-left: 15px;
-    margin-right: 15px;
   }
   .entry-content .wp-block-pullquote:not(.is-style-solid-color) {
     padding: 40px 0;
